--- a/MyBank/package.json
+++ b/MyBank/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.4.2",
+    "@mui/x-date-pickers": "^7.25.0",
     "bootstrap": "^5.3.3",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5"
