--- a/MyBank/package.json
+++ b/MyBank/package.json
@@ -15,6 +15,7 @@
     "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.4.2",
     "@mui/x-date-pickers": "^7.25.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
