--- a/MyBank/package.json
+++ b/MyBank/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
