--- a/MyBank/package.json
+++ b/MyBank/package.json
@@ -15,13 +15,15 @@
     "@mui/lab": "^6.0.0-beta.25",
     "@mui/material": "^6.4.2",
     "@mui/x-date-pickers": "^7.25.0",
+    "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
