--- a/Server/.env
+++ b/Server/.env
@@ -1,1 +1,2 @@
 DATABASE=mongodb+srv://shanishaju84210:shani2000@cluster0.bfh0d.mongodb.net/ebank?retryWrites=true&w=majority&appName=Cluster0
+# DATABASE = mongodb+srv://shanishaju84210:shani2000@cluster0.bfh0d.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
