--- a/MyBank/package.json
+++ b/MyBank/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "4.1",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
