--- a/MyBank/package.json
+++ b/MyBank/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.5",
     "react-toastify": "4.1",
+    "sonner": "^2.0.5",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
