--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.6"
+    "mongoose": "^8.9.6",
+    "multer": "^2.0.1"
   }
 }
